# Refactoring-Kata-Lift-Pass-Pricing

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  README.md  runLocalDatabase.sh
.github/workflows/: csharp-build.yml  csharp-simple-build.yml  java-build.yml  java-simple-build.yml  javascript-build.yml  php-simple-build.yml  python-build.yml  scala-build.yml  typescript-build.yml
csharp/: Lift-Pass-Pricing.sln
csharp-simple/: .gitignore
csharp-simple/LiftPassPricing/: LiftPassPricing.csproj  Prices.cs  Program.cs
csharp-simple/LiftPassPricingTests/: PricesTest.cs  (+1 more)
database/: initDatabase.sql
java/: .gitignore  README.md  pom.xml
java-simple/: .gitignore  README.md  pom.xml
javascript/: .gitignore  README.md  index.js  package-lock.json  package.json
kotlin/: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
php-simple/: .env  .gitignore  Readme.md  composer.json  phpunit.xml  runLocalDatabase.sh
php-symfony/: .gitignore  README.md  composer.json
python/: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt  test_main.py
python/src/: db.py  main.py  prices.py
python/src/services/: cost.py  price_dao.py  price_logic.py
python/test/: test_prices.py
python/test/services/: test_price_logic.py
scala/: .scalafmt.conf  README.md  build.sbt
typescript/: .gitignore  README.md  database.js  database.ts  index.ts  package.json  tsconfig.json  wallaby.js
typescript-bun/: README.md  bun.lockb  package.json  prices.e2e.test.ts  prices.ts
(+47 files in other folders)
